[package]
name = "quic-frp"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitcode = "0.6.9"
clap = { version = "4.5.54", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
smux = "0.2.0"
socket2 = "0.6.1"
tokio = { version = "1.49", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "signal",
] }
tokio-util = "0.7.18"
tokio_kcp = "0.9.8"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "fmt",
  "env-filter",
] }
uuid = { version = "1.19.0", features = ["v4"] }


[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
lto = true

[profile.release.package."*"]
opt-level = "z"

[profile.perf]
inherits      = "release"
debug         = true
codegen-units = 1
strip         = false
opt-level     = 2
lto           = false