[package]
name = "quic-frp"
version = "0.1.8"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitcode = "0.6.9"
clap = { version = "4.5.56", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
notify = "8.2.0"
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
snap = "1.1.1"
socket2 = "0.6.2"
tokio = { version = "1.49", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "signal",
] }
tokio-snappy = "0.2.0"
tokio-util = "0.7.18"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "fmt",
  "env-filter",
] }
uuid = { version = "1.20.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.180"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
lto = true

[profile.release.package."*"]
opt-level = "z"
